source/static/sass/layout.sass
@import "variables.sass"


#top-wrapper
  border-bottom: 2px solid $color-primary-2
  color: white
  display: flex

#top-main
  flex-grow: 1
  display: flex
  min-height: $top-height
  justify-content: space-between
  flex-wrap: nowrap

  @media #{$lowmidres}
    flex-wrap: wrap

#top-main-left
  display: flex


#top-main-right
  display: flex

  a
    color: $color-primary-1
    text-decoration: none
    font-weight: bold
    font-size: 18px

#hamburger
  display: flex
  align-items: center
  padding: 5px 10px


#logo
  display: flex
  padding: 5px

  img
    height: 100%

.user
  display: flex
  align-items: center
  background-color: darken($color-primary-0, 5)
  height: 100%
  white-space: nowrap
  justify-content: space-between

  &.lowres
    align-items: stretch

  .pic
    vertical-align: middle
    display: inline-block
    width: 42px
    height: 42px
    clip-path: circle(21px at center)
    background-size: cover
    background-position: center
    background-image: url("../img/user.svg")
    margin-right: 10px

  .name
    font-weight: 700
    font-size: 16px
    padding: 10px

  .login, .logout
    background-color: $red
    width: 50px
    display: flex
    justify-content: center

    img
      width: 24px
      height: 24px
      align-self: center


  &.midhighres
    .login, .logout
      height: 100%

  .login
    background-color: $green

#slogan-pos
  width: 0
  height: 0
  left: -80px
  position: relative
  align-self: flex-end

#slogan
  position: absolute
  left: 0
  bottom: 0
  color: $whitish
  white-space: nowrap


#search
  display: flex
  align-items: center

  label
    background: transparent url("../img/icons/search.svg") no-repeat center
    background-size: contain
    width: 32px
    height: 32px
    margin-left: 5px
    margin-right: 10px
    display: inline-block

  input[type=search]
    max-width: 0
    overflow-x: hidden
    transition: 0.5s
    border: 0
    padding: 0
    font-weight: bold
    font-size: 22px
    line-height: 30px

  input[type=submit]
    border: none
    background: transparent url("../img/icons/search.svg") no-repeat center
    background-size: contain
    padding: 0 10px
    margin-left: 5px
    margin-right: 10px
    width: 32px
    height: 32px
    display: none

#search-toggler
  display: none

#search-toggler:checked
  ~ label
    width: 24px
    height: 24px
    background: transparent url("../img/icons/right.svg") no-repeat center
    background-size: cover


  ~ input[type=search]
    max-width: 250px
    border: 2px solid $color-primary-2

  ~ input[type=submit]
    display: inline-block

#main-wrapper
  display: flex
  flex-grow: 1
  width: 100%

  @media #{$lowmidres}
    overflow: auto

#nav-column
  background-color: $color-primary-0
  height: 100%
  color: $whitish

  @media #{$lowres}
    display: none
    position: fixed
    z-index: 9999
    top: $top-height
    bottom: 0
    left: 0
    right: 0
    overflow-y: auto

  @media #{$midhighres}
    width: 200px
    position: relative
    z-index: 2
    box-shadow: 2px 2px 5px $color-primary-3

  a
    text-decoration: none
    color: $whitish

  ul
    list-style: none
    background-color: $color-primary-0
    border-left: solid 2px $highlight
    padding-left: 0
    overflow: hidden

  > ul
    padding-left: 0
    background-color: unset
    border-left: none


  li
    padding: 10px
    font-weight: bold
    background-color: $color-primary-0

  > li
    background-color: unset

  input[type=checkbox]
    display: none

  li.collapse ul
    visibility: hidden
    opacity: 0
    max-height: 0
    transition: all 0.5s

  label
    position: relative
    display: block
    width: 100%
    cursor: pointer
    line-height: 32px

  .collapse > label::after
    content: "\25b6"
    position: absolute
    top: 0
    right: 0
    transition: all 0.5s

  li.collapse input:checked ~ ul
    visibility: visible
    opacity: 1
    max-height: 900px

  li.collapse input:checked ~ label::after
    transform: rotate(90deg)

  li.active
    background-color: $color-primary-2

    a
      color: $color-primary-3

#nav-column
  display: flex
  flex-direction: column

#nav-end
  margin-top: auto
  display: flex
  flex-direction: column
  flex-wrap: nowrap
  padding: 10px

#license-img
  max-width: 100%

.bg-grad
  background: radial-gradient(ellipse at top, $color-primary-0, transparent), radial-gradient(ellipse at bottom, $color-primary-2, transparent)
  background-attachment: fixed

#content-column
  display: flex
  flex-flow: column
  //flex-flow: nowrap
  flex-grow: 1

  @media #{$lowmidres}
    overflow: auto
    scroll-snap-type: x mandatory
    height: 100%


#breadcrumbs
  font-size: 1.0em
  font-weight: bold
  border-bottom: 2px solid $color-primary-2
  box-shadow: 0 3px 5px $color-primary-3

  @media #{$lowmidres}
    display: none

  a
    text-decoration: none
    outline: none
    display: block
    float: left
    line-height: 37px
    padding: 0 10px 0 30px
    position: relative
    background-color: $color-primary-0

  a:first-child
    padding-left: 20px

  a:after
    box-shadow: 2px -2px 0 2px rgba(0, 0, 0, 0.4), 3px -3px 0 2px rgba(255, 255, 255, 0.1)
    content: ''
    position: absolute
    top: 0
    right: -18px
    width: 36px
    height: 36px
    transform: scale(0.707) rotate(45deg)
    z-index: 1
    border-radius: 0 5px 0 50px
    background: $color-primary-0

.col
  display: flex
  flex-flow: column
  flex-grow: 1

  &.padded
    padding: 10px

  &.nogrow
    flex-grow: 0

  &.noshrink
    flex-shrink: 0

.flex-pane
  border-radius: 5px
  background-color: transparentize($color-primary-3, 0.5)
  margin: 10px
  box-shadow: 2px 2px 5px $color-primary-4

  @media #{$lowres}
    width: calc(100vw - 15px)

  @media #{$lowmidres}
    scroll-snap-align: start
    scroll-padding: 10px 0 0 10px

.row
  display: flex
  flex-flow: row
  flex-wrap: wrap
  align-items: baseline

  > .grow
    flex-grow: 1

  &.padded
    padding: 10px

  > .flex-pane
    min-width: $small-pane-width

  > .small
    flex-basis: $small-pane-width

  > .medium
    flex-basis: $medium-pane-width

  > .big
    flex-basis: $big-pane-width

  > .full
    flex-basis: 100%


.pane-title
  border-bottom: 2px solid $color-primary-1
  padding: 5px 10px
  border-top-left-radius: 5px
  border-top-right-radius: 5px
  color: $color-primary-1
  text-shadow: 0px -1px 0px $color-primary-0

  a
    color: mix($link-color, $color-primary-1)

  h2
    margin: 0
    font-family: 'Merriweather', serif

.pane-content
  padding: 5px 10px
  line-height: 1.5
  font-size: 16px
  color: $color-primary-1

.caption
  list-style: none
  display: flex
  flex-direction: column
  margin: 0
  padding: 0

  > li
    display: inline-block
    padding: 4px 15px

/* Content decorator styles */
.header-decorator
  min-height: 150px
  background-color: transparentize($color-primary-3, 0.5)
  background-size: cover
  background-position: center
  position: relative
  display: flex
  flex-direction: row
  flex-wrap: wrap
  align-items: center
  padding: 10px 20px

  &:after
    content: ' '
    position: absolute
    left: 0
    width: 100%
    height: 100%
    z-index: -1
    opacity: 0.3
    background-repeat: no-repeat
    background-size: cover
    background-position: center

  h1
    color: $whitish
    font-size: 3em
    text-shadow: black 0 0 5px
    display: inline

    > img
      width: 100px
      height: 100px
      clip-path: circle(50px at center)
      vertical-align: middle
      padding: 0 10px

  h1 a
    color: white

  h3
    color: $whitish
    font-size: 2em
    text-shadow: black 0 0 3px

  h3 a
    color: $whitish

.header-decorator-options
  position: absolute
  right: 0
  top: 0
  border-bottom-left-radius: 5px
  border-left: 2px solid $color-primary-3
  border-bottom: 2px solid $color-primary-3
  background-color: $color-primary-0
  font-weight: bold

  a
    color: $whitish

  ul
    list-style: none
    padding-left: 0
    margin: 0

  li
    display: inline-block
    padding: 5px 10px
    border-right: 2px solid $color-primary-2

  li:last-child
    border-right: 0

#particles
  z-index: -1
  left: 0
  right: 0
  top: 0
  bottom: 0
  position: fixed

